Remove warnings